docs/archive/v1.3.15/packages/libobscur/bin_errors.txt
    Checking async-compat v0.2.5
    Checking futures-util v0.3.32
    Checking uniffi_core v0.28.3
    Checking uniffi v0.28.3
    Checking tokio-socks v0.5.2
    Checking tokio-tungstenite v0.21.0
    Checking libobscur v0.1.0 (E:\Web Project\experimental-workspace\newstart\packages\libobscur)
warning: unused import: `std::sync::Arc`
 --> src\ffi.rs:2:5
  |
2 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `libobscur` (lib) generated 1 warning (run `cargo fix --lib -p libobscur` to apply 1 suggestion)
error[E0425]: cannot find function `uniffi_bindgen_main` in crate `uniffi`
 --> src\bin\uniffi-bindgen.rs:2:13
  |
2 |     uniffi::uniffi_bindgen_main()
  |             ^^^^^^^^^^^^^^^^^^^ not found in `uniffi`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `libobscur` (bin "uniffi-bindgen") due to 1 previous error
